--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.page {
+  padding-top: 5.5em;
+  position: relative; 
+}
 .aiImage {
   margin: 0 auto;
   background-position: center;
@@ -6,7 +10,7 @@ nav {
   margin-top: 0;
   margin: 0 auto;
   width: 100%;
-  height: 12%;
+  height: 5em;
   position: fixed;
   background-color: antiquewhite;
   display: flex;
@@ -14,6 +18,7 @@ nav {
   align-items: center;
   border-bottom: solid black;
   border-top: solid black;
+  
 }
 .pholder {
   margin: 0 auto;
@@ -24,7 +29,9 @@ nav {
   opacity: 0;
 }
 .title {
+  padding: 0;
+  margin: 0;
   text-align: center;
-  font-size: 50px;
+  font-size: 7vmin;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
